fixed overflow visible on slider

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   scroll-behavior: smooth;
   background-color: #0C0F14;
   overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 .header-mob .rectangle-22 {
@@ -328,8 +329,6 @@
 
 .swiper {
   width: 100%;
-  overflow: visible;
-
 }
 
 .swiper-button-prev,
